# relaxometry

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  README.md  setup  setup_dependencies
config/: config.cmake
dependencies_extensions/nifticlib_extension/: CMakeLists.txt
dependencies_extensions/nifticlib_extension/configuration/: CMakeLists.txt  NIFTIConfig.cmake.in  UseNIFTI.cmake.in
nbproject/: configurations.xml  project.xml
scripts/: run_t2star1.sh
src/: Application.cpp  Application.hpp  CMakeLists.txt
src/cuda/: CUDADevicesService.cpp  CUDADevicesService.hpp
src/datatransfer/: DataTransfer.cuh
src/includes/: StringExtensions.h  ezOptionParser.hpp
src/io/: CMakeLists.txt
src/io/data/: ProcessorData.hpp
src/io/handler/: DicomFileHandler.cpp  DicomFileHandler.hpp  FileHandlerContext.cpp  FileHandlerContext.hpp  IFileHandler.cpp  IFileHandler.hpp  NiftiFileHandler.cpp  NiftiFileHandler.hpp  TextFileHandler.cpp  TextFileHandler.hpp
src/mex/: build.m  clm_expr2.cpp  clmf_expr2.cpp  cudalm_expr2.cpp  cudalmf_expr2.cpp
src/models/: Model.cpp  Model.hpp
src/models/c/: Model.hpp  ModelService.cpp  ModelService.hpp
src/models/cuda/: Complex.cuh  Exponential2ParametersR1.cuh  Exponential2ParametersT1.cuh  Exponential3ParametersR1.cuh  Exponential3ParametersT1.cuh  ExponentialR2.cuh  ExponentialT2.cuh  InverseMinimumWeighting.cuh  InverseQuadraticWeighting.cuh  LinearRegressionR2.cuh  LinearRegressionT2.cuh  LinearWeighting.cuh  LukzenSavelov.cuh  Model.cuh  SimpleStartValues.cuh  Statics.cuh
src/processors/: IProcessor.cpp  IProcessor.hpp  ProcessorContext.hpp  ProcessorService.hpp
src/processors/c/LevenbergMarquardt/: CCalculateStepVariables.cpp  CCalculateStepVariables.hpp  CJacobian.cpp  CJacobian.hpp  CLevenbergMarquardt.cpp  CLevenbergMarquardtCore.cpp  CLevenbergMarquardtProcessor.cpp  CLevenbergMarquardtProcessor.hpp
src/processors/c/LevenbergMarquardtFletcher/: CLevenbergMarquardtFletcher.cpp  CLevenbergMarquardtFletcherCore.cpp  CLevenbergMarquardtFletcherProcessor.cpp  CLevenbergMarquardtFletcherProcessor.hpp
src/processors/c/LinearRegression/: CLinearRegression.cpp  CLinearRegressionProcessor.cpp  CLinearRegressionProcessor.hpp
src/processors/cuda/: ErrorHandling.cuh  MemoryHandling.cuh
src/processors/cuda/LevenbergMarquardt/: CudaLevenbergMarquardt.cu  CudaLevenbergMarquardt.hpp  CudaLevenbergMarquardtCore.cu  CudaLevenbergMarquardtProcessor.cpp  CudaLevenbergMarquardtProcessor.hpp
src/processors/cuda/LevenbergMarquardtFletcher/: CudaCalculateAdjustedRsquareValue.cuh  CudaCalculateInverseMatrix.cuh  CudaJacobian.cu  CudaLevenbergMarquardtFletcher.cu  CudaLevenbergMarquardtFletcher.hpp  CudaLevenbergMarquardtFletcherCore.cu  CudaLevenbergMarquardtFletcherProcessor.cpp  CudaLevenbergMarquardtFletcherProcessor.hpp  CudaStepVariables.cuh
src/processors/cuda/LinearRegression/: CudaLinearRegression.cu  CudaLinearRegression.hpp  CudaLinearRegressionProcessor.cpp  CudaLinearRegressionProcessor.hpp
